--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html { 
  font-size: 62.5%; 
+ font-family: 'Abhaya Libre', serif;
 } 
 
 @media(max-width: 75em) { 
@@ -20,33 +21,51 @@ html {
  } 
 } 
 
+
 * {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
 }
 
-body {
+header {
+ position: fixed;
+ top: 0;
+ left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
- padding: 0.625rem 0 0.625rem 0.625rem;
- max-width: 1100px;
- min-width: 100%;
+ width: 100%;
+ height: 14rem;
+ background-image: linear-gradient(115deg, rgba(184, 134, 11, 0.8), rgb(0, 0, 0, 0.2), rgb(184,134,11), rgba(0, 0, 0, 0.2), rgba(184, 134, 11, 0.8)), url('https://images.unsplash.com/photo-1577037770129-fba0e241082b?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NTEzMjcxMg&ixlib=rb-1.2.1&q=80&w=400');
+ background-repeat: repeat;
+ background-position: center;
+ background-size: contain;
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; 
+ z-index: 10; 
 }
 
 h1 {
  padding: 0.625rem;
- font-size: 6rem;
- font-weight: bold;
- color: #000;
+ font-size: 7rem;
+ font-weight: 700;
+ text-align: center;
+ letter-spacing: 0.5rem;
+ color: rgb(255, 127, 80);
+ -webkit-text-stroke: 1px rgba(255, 127, 80, 0.4);
+ text-shadow: -2px 2px 10px rgba(255, 127, 80, 0.4);
 }
 
 table {
+ font-size: 1.7rem;
+ color: snow;
  border-collapse: collapse;
- width: 100%;
+ width: 100%; 
+ z-index: 0;
 }
+
+
 
 th, td {
  border: 3px solid #333;
@@ -55,36 +74,132 @@ th, td {
 }
 
 tr:nth-child(even) {
- background: #dddddd;
+ background: linear-gradient(110deg,
+                   rgba(0, 0, 0, 0.4), rgb(0, 0, 15, 0.2) 
+                   );
 }
 
-div {
- width: 70%;
- border: solid burlywood;
- text-align: center;
+.date-picker {
+ text-align: left;
+ width: auto;
+ margin: 0.625rem;
+ margin-bottom: 2rem;
  padding: 0.625rem;
- margin-top: 0.625rem;
+ font-size: 2rem;
+ font-weight: 600;
+ color: snow;
 }
 
-#body {
+#today {
+ margin-bottom: 0.625rem;
+}
+
+
+#table-wrapper {
+ position: relative;
+ display: flex;
+ width: 95%;
+ height: auto;
+ border: groove rgba(250, 235, 215, 0.6) 4px;
+ border-radius: 10px;
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;  
+ z-index: 5;
+ overflow-x: scroll;
+}
+
+
+#container1, #container2 {
+ visibility: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
+ width: 75%; 
+ border: none;
+ text-align: center;
+ font-size: 1.2rem;
+ color: snow;
+ padding: 0.625rem;
+ margin-top: 0.625rem;
+ background: rgba(0, 0, 0, 0.2);
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; 
+ z-index: 5;  
+}
+
+#body {
  background: beige;
  padding: 0.625rem 0 0.625rem 0.625rem;
- max-width: 1100px;
- min-width: 100%;
+ width: 100%;
+ height: 100%;
+ position: relative;
 }
+
+#wrapper {
+ position: absolute;
+ top: 13rem;
+ left: 0;
+ margin-bottom: 0;
+ width: 100%;
+ 
+ background-image: linear-gradient(270deg,
+                    rgba(0, 0, 0, 0.9), rgb(0, 0, 15, 0.4), rgba(0, 0, 25, 0.2)
+                   ),
+                   
+                   url('https://images.unsplash.com/photo-1604078893234-ff3a1a5d5292?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NTEyNjYzNg&ixlib=rb-1.2.1&q=80&w=400');
+                 
+ background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover; 
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;  
+ z-index: 0; 
+}
+
+#wrapper-top { 
+ margin-top: 0.625rem;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column; 
+ width: 100%;
+}
+
+#wrapper-center {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ width: 100%; 
+}
+
+#wrapper-bottom {
+ position: relative;
+ margin-top: 0.625rem;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column; 
+ width: 100%;
+}
+
 
 #submit {
  font-size: 2rem;
- background: #333;
- border: solid burlywood 3px;
+ background: #0a0a23;
  width: 60%;
  color: white;
  text-align: center;
  padding: 1rem 0;
  margin: 4rem;
  cursor: pointer;
+ border: groove rgba(250, 235, 215, 0.6) 4px;
+ border-radius: 10px;
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;  
+ 
+}
+
+#submit:focus, #submit:active { 
+ outline-color: transparent; 
+ outline-style: none; 
+ box-shadow: 0 0 0 1px rgba(250, 235, 215, 0.6); 
+ transition: 0.7s; 
 }
